<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddStuffActivity">

    <EditText
        android:id="@+id/subject_edittext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:hint="@string/enter_the_title"/>

    <EditText
        android:id="@+id/description_edittext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:hint="@string/make_your_entry"
        android:minLines="5"
        android:inputType="textMultiLine"
        />
    <Button
        android:id="@+id/add_record"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:ems="10"
        android:text="@string/add_entry"
        />

        />

</LinearLayout>